# doc-grounded-rag

./: .env.example  .gitignore  AGENT_RULES.md  Makefile  README.md  pyproject.toml
docs/: architecture.md  ingestion-and-chunking.md
docs/decisions/: 0001-system-boundaries.md
docs/sprints/: SPRINT_0_EXECUTION_BOARD.md  SPRINT_1_EXECUTION_BOARD.md  SPRINT_2_EXECUTION_BOARD.md  SPRINT_3_EXECUTION_BOARD.md  SPRINT_4_EXECUTION_BOARD.md  SPRINT_5_EXECUTION_BOARD.md  SPRINT_6_EXECUTION_BOARD.md
src/rag/: __init__.py  config.py  logging.py
src/rag/chunking/: __init__.py  ids.py  splitter.py
src/rag/contracts/: __init__.py  answer.py  chunk.py  document.py  retrieval.py
src/rag/eval/: __init__.py  interfaces.py
src/rag/generate/: __init__.py  interfaces.py
src/rag/index/: __init__.py  interfaces.py
src/rag/ingest/: __init__.py  interfaces.py  normalize.py  parser.py
src/rag/pipeline/: ingest.py  orchestrator.py
src/rag/rerank/: __init__.py  interfaces.py
src/rag/retrieve/: __init__.py  interfaces.py
src/rag/storage/: __init__.py  chunk_store.py
tests/: test_chunk_ids.py  test_chunk_splitter.py  test_chunk_store.py  test_config.py  test_contracts.py  test_imports.py  test_ingest_pipeline.py  test_logging.py  test_noop_interfaces.py  test_noop_pipeline.py  test_pdf_parser.py  test_text_normalizer.py
